fix overflow issues from google console

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -105,6 +105,10 @@ pre {
   overflow-x: scroll;
 }
 
+.asciiprose p {
+  overflow-x: scroll;
+}
+
 .asciiprose .formalpara-title p {
   margin-bottom: 0;
   margin-top: 1em;
